--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@types/nodemailer": "^6.4.17",
     "@types/qrcode": "^1.5.5",
     "email-validator": "^2.0.4",
+    "google-auth-library": "^9.15.0",
+    "googleapis": "^144.0.0",
     "mercadopago": "^2.1.0",
     "nanoid": "^5.0.9",
     "next": "14.2.20",
